--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,19 @@ dependencies {
     implementation "androidx.core:core-ktx:$version_core"
 
     // TODO (01) Add Dependencies for Retrofit with the Scalar Converter
+    implementation "com.squareup.moshi:moshi:$version_moshi"
+    implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
+
+    implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
+    implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
+
+    // coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+
+    //glide image library
+    implementation "com.github.bumptech.glide:glide:$version_glide"
+
+
 }
