--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,8 +79,11 @@ dependencies {
     // Retrofit Coroutines Support
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$version_retrofit_coroutines_adapter"
 
-    // Glide
+    // Glide image
     implementation "com.github.bumptech.glide:glide:$version_glide"
 
     // TODO (01) Add the Gradle dependency for the RecyclerView
+    implementation "androidx.recyclerview:recyclerview:$version_recyclerview"
+
+
 }
